[gd_scene load_steps=38 format=2]

[ext_resource path="res://characters/player_liwlih/spt_stunner.png" type="Texture" id=1]
[ext_resource path="res://characters/player_liwlih/player_liwlih.gd" type="Script" id=2]
[ext_resource path="res://characters/player_liwlih/spt_turbine_fire.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "turbine",
"speed": 5.0
} ]

[node name="player_liwlih" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 24, 0 )
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 11, 0 )
shape = SubResource( 1 )

[node name="bullet_pos_skycut" type="Node2D" parent="."]
position = Vector2( 21.5092, 0 )

[node name="stunner_fire" type="AnimatedSprite" parent="."]
position = Vector2( -64.5633, 1.41364 )
rotation = -1.5708
scale = Vector2( 1.01128, 0.861724 )
frames = SubResource( 34 )
animation = "turbine"
frame = 10
speed_scale = 32.0
playing = true

[node name="skycut_fire" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -69.4244, 1.14308 )
rotation = -1.5708
scale = Vector2( 0.808362, 0.995542 )
frames = SubResource( 34 )
animation = "turbine"
frame = 12
speed_scale = 38.0
playing = true

[node name="smoke_fire" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -61.1148, 1.39709 )
rotation = -1.5708
scale = Vector2( 1.43414, 0.830137 )
frames = SubResource( 34 )
animation = "turbine"
frame = 9
speed_scale = 26.0
playing = true

[node name="body" type="RigidBody2D" parent="."]
